--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -11,12 +11,11 @@ html,
 body,
 #app {
   min-width: 300px;
-  width: 100%;
-  height: 100%;
 }
 
 html {
   font-size: 14px;
+  scroll-behavior: smooth;
 }
 
 body {
